feat: add resource for vite

--- a/resource/index.html
+++ b/resource/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="kratos"></div>
+    <script type="module" src="./src/main.ts"></script>
 </body>
 </html>
